My CloudFormation Work/VPC-Basic.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Two VPCs, each with one public and one private subnet'

Parameters:
  VPC1CIDR:
    Type: String
    Default: "30.0.0.0/16"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    Description: "Enter the CIDR block for VPC1"
    ConstraintDescription: "Must be a valid CIDR range of the form x.x.x.x/nn"

  VPC2CIDR:
    Type: String
    Default: "40.0.0.0/16"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    Description: "Enter the CIDR block for VPC2"
    ConstraintDescription: "Must be a valid CIDR range of the form x.x.x.x/nn"

  AvailabilityZoneList:
    Type: CommaDelimitedList
    Default: "us-east-1a,us-east-1b,us-east-1c"
    AllowedValues:
      - us-east-1a
      - us-east-1b
      - us-east-1c
      - us-east-1d
      - us-east-1e
      - us-east-1f
    Description: "Select Availability Zones for the subnets"

  SubnetBitsVPC1:
    Type: Number
    Default: 8
    MinValue: 4
    MaxValue: 12
    Description: >
      Number of additional bits for subnet mask.
      Example: /16 + 8 = /24 subnets

  SubnetBitsVPC2:
    Type: Number
    Default: 8
    MinValue: 4
    MaxValue: 12
    Description: >
      Number of additional bits for subnet mask.
      Example: /16 + 8 = /24 subnets

  AllowedProtocol:
    Type: String
    Default: -1
    AllowedValues: ["-1", "6", "17"] # -1=all, 6=TCP, 17=UDP
    Description: "Select protocol for Security Group rules (-1=all, 6=TCP, 17=UDP)"

  AllowPort:
    Type: Number
    Default: 0
    MinValue: 0
    MaxValue: 65535
    Description: "Enter port number to allow (0 = all ports)"

Resources:
  # VPCs
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPC1CIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Simple-VPC-1

  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPC2CIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Simple-VPC-2

  # Internet Gateways
  InternetGateway1:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Simple-IGW-1

  InternetGateway2:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Simple-IGW-2

  # Attach IGWs
  InternetGatewayAttachment1:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC1
      InternetGatewayId: !Ref InternetGateway1

  InternetGatewayAttachment2:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC2
      InternetGatewayId: !Ref InternetGateway2

  # Subnets - VPC1
  PublicSubnet1VPC1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      AvailabilityZone: !Select [0, !Ref AvailabilityZoneList]
      CidrBlock: !Select [0, !Cidr [!Ref VPC1CIDR, 4, !Ref SubnetBitsVPC1]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC1-PublicSubnet1

  PrivateSubnet1VPC1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      AvailabilityZone: !Select [0, !Ref AvailabilityZoneList]
      CidrBlock: !Select [1, !Cidr [!Ref VPC1CIDR, 4, !Ref SubnetBitsVPC1]]
      Tags:
        - Key: Name
          Value: VPC1-PrivateSubnet1

  PublicSubnet2VPC1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      AvailabilityZone: !Select [1, !Ref AvailabilityZoneList]
      CidrBlock: !Select [2, !Cidr [!Ref VPC1CIDR, 4, !Ref SubnetBitsVPC1]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC1-PublicSubnet2

  PrivateSubnet2VPC1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      AvailabilityZone: !Select [1, !Ref AvailabilityZoneList]
      CidrBlock: !Select [3, !Cidr [!Ref VPC1CIDR, 4, !Ref SubnetBitsVPC1]]
      Tags:
        - Key: Name
          Value: VPC1-PrivateSubnet2

  # Subnets - VPC2
  PublicSubnet1VPC2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC2
      AvailabilityZone: !Select [2, !Ref AvailabilityZoneList]
      CidrBlock: !Select [0, !Cidr [!Ref VPC2CIDR, 2, !Ref SubnetBitsVPC2]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC2-PublicSubnet1

  PrivateSubnet1VPC2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC2
      AvailabilityZone: !Select [2, !Ref AvailabilityZoneList]
      CidrBlock: !Select [1, !Cidr [!Ref VPC2CIDR, 2, !Ref SubnetBitsVPC2]]
      Tags:
        - Key: Name
          Value: VPC2-PrivateSubnet1

  # Route Tables
  PublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PublicRT

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PrivateRT

  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: VPC2-PublicRT

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: VPC2-PrivateRT

  # Internet Routes
  PublicRoute1:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment1
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway1

  PublicRoute2:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment2
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway2

  PublicRoute1ToVPC2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: !Ref VPC2CIDR
      VpcPeeringConnectionId: !Ref PeeringConnection

  PublicRoute2ToVPC1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: !Ref VPC1CIDR
      VpcPeeringConnectionId: !Ref PeeringConnection

  PrivateRoute1ToVPC2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: !Ref VPC2CIDR
      VpcPeeringConnectionId: !Ref PeeringConnection

  PrivateRoute2ToVPC1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: !Ref VPC1CIDR
      VpcPeeringConnectionId: !Ref PeeringConnection

  # Associations VPC1
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1VPC1
      RouteTableId: !Ref PublicRouteTable1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1VPC1
      RouteTableId: !Ref PrivateRouteTable1

  # Associations VPC2
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1VPC2
      RouteTableId: !Ref PublicRouteTable2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1VPC2
      RouteTableId: !Ref PrivateRouteTable2


  # Security Groups and Peering
  PeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref VPC1
      PeerVpcId: !Ref VPC2

  SecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for VPC1 allowing all traffic from VPC2
      VpcId: !Ref VPC1
      SecurityGroupIngress:
        - IpProtocol: !Ref AllowedProtocol
          FromPort: !Ref AllowPort
          ToPort: !Ref AllowPort
          CidrIp: !Ref VPC2CIDR

  SecurityGroup2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for VPC2 allowing all traffic from VPC1
      VpcId: !Ref VPC2
      SecurityGroupIngress:
        - IpProtocol: !Ref AllowedProtocol
          FromPort: !Ref AllowPort
          ToPort: !Ref AllowPort
          CidrIp: !Ref VPC1CIDR

  # Network ACLs VPC1
  VPC1PublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PublicNACL

  VPC1PrivateNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PrivateNACL

  # Network ACLs VPC2
  VPC2PublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: VPC2-PublicNACL

  VPC2PrivateNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: VPC2-PrivateNACL

  # NACL Entries VPC1 Public
  VPC1PublicNACLEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC1PublicNACL
      RuleNumber: 100
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: false
      CidrBlock: !Ref VPC2CIDR

  VPC1PrivateNACLEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC1PrivateNACL
      RuleNumber: 100
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: false
      CidrBlock: !Ref VPC2CIDR

# NACL Entries VPC2 Public
  VPC2PublicNACLEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC2PublicNACL
      RuleNumber: 100
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: false
      CidrBlock: !Ref VPC1CIDR

  VPC2PrivateNACLEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC2PrivateNACL
      RuleNumber: 100
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: false
      CidrBlock: !Ref VPC1CIDR

  # NACL Entries VPC1 
  VPC1PublicNACLEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC1PublicNACL
      RuleNumber: 200
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: true
      CidrBlock: !Ref VPC2CIDR

  VPC1PrivateNACLEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC1PrivateNACL
      RuleNumber: 200
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: true
      CidrBlock: !Ref VPC2CIDR

  # NACL Entries VPC2
  VPC2PublicNACLEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC2PublicNACL
      RuleNumber: 200
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: true
      CidrBlock: !Ref VPC1CIDR

  VPC2PrivateNACLEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VPC2PrivateNACL
      RuleNumber: 200
      Protocol: !Ref AllowedProtocol
      PortRange:
        From: !Ref AllowPort
        To: !Ref AllowPort
      RuleAction: allow
      Egress: true
      CidrBlock: !Ref VPC1CIDR

  # NACL Associations
  PublicVPC1Subnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1VPC1
      NetworkAclId: !Ref VPC1PublicNACL

  PrivateVPC1Subnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1VPC1
      NetworkAclId: !Ref VPC1PrivateNACL
  
  PublicVPC1Subnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2VPC1
      NetworkAclId: !Ref VPC1PublicNACL

  PrivateVPC1Subnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2VPC1
      NetworkAclId: !Ref VPC1PrivateNACL

  PublicVPC2Subnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1VPC2
      NetworkAclId: !Ref VPC2PublicNACL

  PrivateVPC2Subnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1VPC2
      NetworkAclId: !Ref VPC2PrivateNACL

Outputs:
  VPC1Id:
    Description: VPC1 ID
    Value: !Ref VPC1
  
  VPC2Id:
    Description: VPC2 ID
    Value: !Ref VPC2
  
  PublicSubnet1IdVPC1:
    Description: Public Subnet in VPC1
    Value: !Ref PublicSubnet1VPC1
  
  PrivateSubnet1IdVPC1:
    Description: Private Subnet in VPC1
    Value: !Ref PrivateSubnet1VPC1
  
  PublicSubnet2IdVPC1:
    Description: Public Subnet in VPC1
    Value: !Ref PublicSubnet2VPC1
  
  PrivateSubnet2IdVPC1:
    Description: Private Subnet in VPC1
    Value: !Ref PrivateSubnet2VPC1
  
  PublicSubnet1IdVPC2:
    Description: Public Subnet in VPC2
    Value: !Ref PublicSubnet1VPC2
  
  PrivateSubnet1IdVPC2:
    Description: Private Subnet in VPC2
    Value: !Ref PrivateSubnet1VPC2

  SG1Id:
    Description: Security Group for VPC1
    Value: !Ref SecurityGroup1

  SG2Id:
    Description: Security Group for VPC2
    Value: !Ref SecurityGroup2 

  PublicNACL1Id:
    Description: Public NACL for VPC1
    Value: !Ref VPC1PublicNACL

  PrivateNACL1Id:
    Description: Private NACL for VPC1
    Value: !Ref VPC1PrivateNACL

  PublicNACL2Id:
    Description: Public NACL for VPC2
    Value: !Ref VPC2PublicNACL

  PrivateNACL2Id:
    Description: Private NACL for VPC2
    Value: !Ref VPC2PrivateNACL
